# MandelbrotSet

./: .gitignore  .gitmodules  CMakeLists.txt  Clean.sh  README.md  StartTests.sh  dump8slow.txt  dumpafter.txt  dumpbefore.txt
TestingSystem/: StartScript.sh
TestingSystem/Tests/: Tests.cpp  Tests.h
TestingSystem/TestsResults/: Native.txt  SIMD.txt  Unroll16.txt  Unroll2.txt  Unroll32.txt  Unroll4.txt  Unroll8.txt
inc/: App.hpp  ErrorTypes.hpp  Mandelbrot.hpp  Tests.hpp
src/: App.cpp  Mandelbrot.cpp  Tests.cpp  main.cpp
